[Aalekh] ADD: Added sort_by functionality for movies rating and release year
